adds basic scaffolding

--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -1,14 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="script.js" defer></script>
+    <title>homework4 -grid</title>
 </head>
+
 <body>
-    <main class="grid-wrapper">
-        
+
+    <header id="site-banner" style="max-width: 1280px; margin: auto" >
+        <h1>Welcome to the site</h1 >
+        <nav>
+            <ul>
+                <li>home</li>
+                <li>about</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+    </header>
+    <main class="grid-wrapper" style="max-width: 1280px; margin: auto" >
+        <!-- the quarter row -->
+        <div class="col-1">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+
+        <!-- the half row-->
+        <div class="col-2">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+        <div class="col-2">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+
+        <!-- quarter, 3 quarter -->
+        <div class="col-3">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+        <div class="col-1">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+
+        <!-- full span -->
+        <div class="col-4">
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+            <div class="product-card">
+                <img src="" alt="">
+                <h3 class="product-name"> Ipsum dolor:<span> Lorem</span> </h3>
+                <p class="product-desc"></p>
+            </div>
+        </div>
+
+        <!-- quarter, half, quarter -->
+
     </main>
 </body>
+
 </html>
