--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <header id="site-banner" style="max-width: 1920px; margin: auto" >
+    <header id="site-banner" style="max-width: 1920px; margin:1em auto" >
         <h1>Welcome to the site</h1 >
         <nav>
             <ul>
