migrates inline styles to styles.css

--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -13,12 +13,12 @@
 
 <body>
 
-    <header id="site-banner" style="max-width: 1920px; margin:1em auto">
+    <header id="site-banner">
         <img class="header-img"src="https://i.etsystatic.com/16200550/r/il/74a1fe/3221847250/il_570xN.3221847250_i457.jpg" alt="FakeBiz logo">
         <div class="site-title-wrapper">
             <h1 id="site-title">Fakebiz</h1>
             <nav>
-                <ul>
+                <ul class="site-nav">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
@@ -77,7 +77,7 @@
         </div>
 
     </main>
-    <footer id="site-footer" >
+    <footer id="site-footer">
         <h2>share us with your friends</h2>
     </footer>
 </body>
