fixes ordering of bottom 3 elements

--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -65,14 +65,14 @@
         </div>
 
         <!-- quarter, half, quarter -->
-        <div class="col-1 col-tab">
+        <div class="col-1" id="C">
 
         </div>
         <div class="col-2" id="B">
 
         </div>
 
-        <div class="col-1 col-tab">
+        <div class="col-1">
 
         </div>
 
