reformats html document:

--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -30,51 +30,26 @@
 
     <main class="grid-wrapper">
         <!-- the quarter row -->
-        <div class="col-1">
-
-        </div>
-        <div class="col-1">
-
-        </div>
-        <div class="col-1">
-
-        </div>
-        <div class="col-1">
-
-        </div>
+        <div class="col-1"></div>
+        <div class="col-1"></div>
+        <div class="col-1"></div>
+        <div class="col-1"></div>
 
         <!-- the half row-->
-        <div class="col-2">
-
-        </div>
-        <div class="col-2">
-
-        </div>
+        <div class="col-2"></div>
+        <div class="col-2"></div>
 
         <!-- quarter, 3 quarter -->
-        <div class="col-3">
-
-        </div>
-        <div class="col-1 col-tab">
-
-        </div>
+        <div class="col-3"></div>
+        <div class="col-1 col-tab"></div>
 
         <!-- full span -->
-        <div class="col-4">
-
-        </div>
+        <div class="col-4"></div>
 
         <!-- quarter, half, quarter -->
-        <div class="col-1" id="C">
-
-        </div>
-        <div class="col-2" id="B">
-
-        </div>
-
-        <div class="col-1">
-
-        </div>
+        <div class="col-1" id="C"></div>
+        <div class="col-2" id="B"></div>
+        <div class="col-1"></div>
 
     </main>
     <footer id="site-footer">
