adds new custom 6th row

--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -49,6 +49,16 @@
         <!-- quarter, half, quarter -->
         <div class="col-1" id="C"></div>
         <div class="col-2" id="B"></div>
+        <div class="col-1 col-tab"></div>
+
+        <!-- custom row -->
+        <div class="col-2x3"></div>
+        <div class="col-1"></div>
+        <div class="col-1"></div>
+
+         <!-- quarter, half, quarter -->
+        <div class="col-1" id="D"></div>
+        <div class="col-2" id="E"></div>
         <div class="col-1"></div>
 
     </main>
