adds social media icons

--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js" async></script>
+    <script src="https://kit.fontawesome.com/64cea3d0f8.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
     <title>homework4 -grid</title>
 </head>
@@ -14,7 +15,9 @@
 <body>
 
     <header id="site-banner">
-        <img class="header-img"src="https://i.etsystatic.com/16200550/r/il/74a1fe/3221847250/il_570xN.3221847250_i457.jpg" alt="FakeBiz logo">
+        <img class="header-img"
+            src="https://i.etsystatic.com/16200550/r/il/74a1fe/3221847250/il_570xN.3221847250_i457.jpg"
+            alt="FakeBiz logo">
         <div class="site-title-wrapper">
             <h1 id="site-title">Fakebiz</h1>
             <nav>
@@ -56,7 +59,7 @@
         <div class="col-1"></div>
         <div class="col-1"></div>
 
-         <!-- quarter, half, quarter -->
+        <!-- quarter, half, quarter -->
         <div class="col-1" id="D"></div>
         <div class="col-2" id="E"></div>
         <div class="col-1"></div>
@@ -64,6 +67,23 @@
     </main>
     <footer id="site-footer">
         <h2>share us with your friends</h2>
+        <div class="socials">
+            <a href="https://www.facebook.com/">
+                <span class="social-link">
+                    <i class="fa-brands fa-facebook"></i>
+                </span>
+            </a>
+            <a class="social-link" href="https://twitter.com/">
+                <span class="social-link">
+                    <i class="fa-brands fa-twitter"></i>
+                </span>
+            </a>
+            <a class="social-link" href="https://www.instagram.com/">
+                <span class="social-link">
+                    <i class="fa-brands fa-instagram"></i>
+                </span>
+            </a>
+        </div>
     </footer>
 </body>
 
