fixes item layout ordering

--- a/hmwrk_4/index.html
+++ b/hmwrk_4/index.html
@@ -52,7 +52,7 @@
         <!-- quarter, half, quarter -->
         <div class="col-1" id="C"></div>
         <div class="col-2" id="B"></div>
-        <div class="col-1 col-tab"></div>
+        <div class="col-1 "></div>
 
         <!-- custom row -->
         <div class="col-2x3"></div>
@@ -66,7 +66,7 @@
 
     </main>
     <footer id="site-footer">
-        <h2>share us with your friends</h2>
+        <h2 style="margin-left:1em;">share us with your friends</h2>
         <div class="socials">
             <a href="https://www.facebook.com/">
                 <span class="social-link">
